IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/2/13: In eTomo fixed the batchruntomo error message.(Bug# 1702)

6/2/13: Added an editor for directives derived from the dataset.(Bug# 1685)

5/30/13: Fixed Tomodataplots to send right color option to Onegenplot.

5/29/13: IMOD-4-6-21
5/29/13: Ctfplotter: added version number to defocus file so the old bug of
view numbers off by 1 will not be detected in error, allowed double-clicking a
row to set the angles to that row, and added checkbox fo fitting to each view.

5/28/13: In eTomo - Join, using the -cs Midas parameter instead of the -c
parameter.(Bug# 1704)

5/28/13: Changed the local load average process to use the bash shell unless
the user's shell is tcsh.(Bug# 1703)

5/27/13: Tiltxcorr can now produce a file of warping transformations with a
variant of patch tracking.

5/27/13: Made Patch2imod able to produce a model from warping transforms.

5/27/13: Midas: Added input option to specify sample sizes instead of chunks
sizes so that selected sections can be constrained better; added controls for
see warping vectors and selecting warp points based on size of their shifts;
improved cross-correlation around warp point to reduce need for iterating.

5/27/13: Made Xf2rotmagstr able to read warping files.

5/22/13: Fixed 3dmod recognition of DigitalMicrograph files to work with file
from tilt series.

5/21/13: Batchruntomo will now accept .mrc stack files and rename them to .st,
will take template entries with no path and find files in default locations,
and gets the pixel size correctly from FEI files.

5/7/13: Added option to Ctfphaseflip to set maximum strip width, for reducing
artifacts at zeros in FFT at low tilts.

4/10/13: Fixed Batchruntomo's reading of processchunks log hanging on Mac.

4/9/13: Handled multi-line INFO and WARNING messages in copytomocoms.
(Bug# 1694)

4/9/13: Made shift limits to Tiltxcorr apply to shift from one view to next