@@ -50,7 +50,8 @@ from pip import *
 options = ['s::B:Treat unsigned data as signed (use if < 32768)',
            'r::B:Reduce (divide by 2) unsigned 16-bit data or 32-bit integer data',
            'u::B:Save unsigned data in unsigned 16-bit file mode',
-           'c::B:Convert 32-bit integer data to 16-bit integers instead of floats']
+           'c::B:Convert 32-bit integer data to 16-bit integers instead of floats',
+           'i::B:Stack images in inverted order in Z']
 
 
 PipExitOnError(False, prefix)
@@ -66,6 +67,7 @@ convert = ""
 unsigned = ""
 signed = 0
 signopt = 0
+invertStack = ""
 
 if PipGetBoolean('c', 0):
    convert = '-c'
@@ -82,6 +84,12 @@ if PipGetBoolean('s', 0):
 if signopt > 1:
    exitError('You can enter only one of -r, -u, and -s')
 
+# For inversion, raw2mrc just has to be told to invert slices when reading from files
+# and not to invert files, because we are inverting file list here
+if PipGetBoolean('i', 0):
+   invertStack = '-iz'
+
+   
 # Spaces in filenames will be taken care of by quoting all the non-option args
 
 # Build arrays of critical values when we scan the data
@@ -106,7 +114,10 @@ zPixelOpt = ''
 prnstr('Scanning files...')
 nfiles = numNonOpts - 1
 for num in range(nfiles):
-   fname = PipGetNonOptionArg(num)
+   argnum = num
+   if invertStack:
+      argnum = nfiles - 1 - num
+   fname = PipGetNonOptionArg(argnum)
    fnames.append('"' + fname + '"')
    if not os.path.exists(fname):
       exitError('Input file ' + fname + ' does not exist')
@@ -254,9 +265,9 @@ if os.path.exists(outfile):
 
 prnstr('Converting files...')
 if not differ:
-   rawcom = fmtstr('raw2mrc -f -o {} {} -t {} -x {} -y {} -z {} {} {} {} {} {}', offset,
-                   swap, type, xsize, ysize, zsize, convert, divide, unsigned, pixelOpt,
-                   zPixelOpt)
+   rawcom = fmtstr('raw2mrc -f -o {} {} -t {} -x {} -y {} -z {} {} {} {} {} {} {}',
+                   offset, swap, type, xsize, ysize, zsize, convert, invertStack, divide,
+                   unsigned, pixelOpt, zPixelOpt)
    for fname in fnames:
       rawcom += ' ' + fname
    rawcom += ' "' + outfile + '"'
@@ -271,12 +282,16 @@ newstcom = []
 pid = '.' + str(os.getpid())
 try:
    for i in range(nfiles):
-      fname = PipGetNonOptionArg(i)
+      argnum = i
+      if invertStack:
+         argnum = nfiles - 1 - i
+      fname = PipGetNonOptionArg(argnum)
       outtmp = fname + pid
       tmplist.append(outtmp)
-      rawcom = fmtstr('raw2mrc -f -o {} {} -t {} -x {} -y {} -z {} {} {} {} {} "{}" "{}"',
-                      offsets[i], swap, types[i], xsizes[i], ysizes[i], zsizes[i],
-                      convert, divide, unsigned, pixelOpt, fname, outtmp)
+      rawcom = fmtstr('raw2mrc -f -o {} {} -t {} -x {} -y {} -z {} {} {} {} {} {} ' + \
+                         '"{}" "{}"', offsets[i], swap, types[i], xsizes[i], ysizes[i],
+                      zsizes[i], convert, invertStack, divide, unsigned, pixelOpt, fname,
+                      outtmp)
       try:
          runcmd(rawcom, None, 'stdout')
       except ImodpyError:
